--- a/tinyproxy.conf
+++ b/tinyproxy.conf
@@ -77,8 +77,7 @@ DefaultErrorFile "/usr/share/tinyproxy/default.html"
 # forwarding the request to that host.  The default value of StatHost is
 # tinyproxy.stats.
 #
-#StatHost "tinyproxy.stats"
-#
+StatHost "tinyproxy.stats"
 
 #
 # StatFile: The HTML file that gets sent when a request is made
