--- a/tinyproxy.conf
+++ b/tinyproxy.conf
@@ -84,7 +84,7 @@ StatHost "tinyproxy.stats"
 # for the stathost.  If this file doesn't exist a basic page is
 # hardcoded in tinyproxy.
 #
-StatFile "/usr/share/tinyproxy/stats.html"
+# StatFile "/usr/share/tinyproxy/stats.html"
 
 #
 # LogFile: Allows you to specify the location where information should
