Add docker-entrypoint.sh to tail tinyproxy logs after start

--- a/tinyproxy.conf
+++ b/tinyproxy.conf
@@ -92,7 +92,7 @@ StatHost "tinyproxy.stats"
 # and enable the Syslog directive.  These directives are mutually
 # exclusive.
 #
-#LogFile "/var/log/tinyproxy/tinyproxy.log"
+LogFile "/var/log/tinyproxy/tinyproxy.log"
 
 #
 # Syslog: Tell tinyproxy to use syslog instead of a logfile.  This
