--- a/tinyproxy.conf
+++ b/tinyproxy.conf
@@ -116,7 +116,7 @@ LogFile "/var/log/tinyproxy/tinyproxy.log"
 # LogLevel was set to Warning, then all log messages from Warning to
 # Critical would be output, but Notice and below would be suppressed.
 #
-LogLevel Warning
+LogLevel Info
 
 #
 # PidFile: Write the PID of the main tinyproxy thread to this file so it
@@ -207,7 +207,7 @@ MaxRequestsPerChild 0
 # The order of the controls are important. All incoming connections are
 # tested against the controls based on order.
 #
-Allow 127.0.0.1
+# Allow 172.17.0.1
 
 #
 # AddHeader: Adds the specified headers to outgoing HTTP requests that
